fix(cli): rename route to /command
